--- a/RegressionLogistic_DecisionTreeEcartType copy.ipynb
+++ b/RegressionLogistic_DecisionTreeEcartType copy.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "#Standardisation des variables quantitatives\n",
     "for col in df.drop('CŒUR', axis =1).select_dtypes(np.number).columns:\n",
-    "    df[col] = df[col]/df[col].max()\n"
+    "    df[col] = (df[col] - df[col].mean())/ df[col].std()\n"
    ]
   },
   {
@@ -167,8 +167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9239130434782609\n",
-      "0.7989130434782609\n"
+      "0.9130434782608695\n",
+      "0.7663043478260869\n"
      ]
     }
    ],
@@ -204,9 +204,9 @@
      "output_type": "stream",
      "text": [
       "[[ 66   8]\n",
-      " [  6 104]]\n",
-      "[[65  9]\n",
-      " [28 82]]\n"
+      " [  8 102]]\n",
+      "[[63 11]\n",
+      " [32 78]]\n"
      ]
     }
    ],
@@ -227,8 +227,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9454545454545454\n",
-      "0.7454545454545455\n"
+      "0.9272727272727272\n",
+      "0.7090909090909091\n"
      ]
     }
    ],
@@ -250,8 +250,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9285714285714286\n",
-      "0.9010989010989011\n"
+      "0.9272727272727272\n",
+      "0.8764044943820225\n"
      ]
     }
    ],
